desktop-themes/ContrastHighInverse/gtk-3.0/gtk-widgets.css
/* ... */
.primary-toolbar .button {
    border-color: transparent;
}

.primary-toolbar .button.raised,
.primary-toolbar .raised .button {
    border-color: @theme_button_fg;
}

/******************
 * Linked buttons *
 ******************/

/* Middle button */
.linked .entry,
.linked > GtkComboBox > .button:last-child,
.linked > GtkComboBox > .button:focus:last-child,
.linked > GtkComboBox > .button:insensitive:last-child,
.linked > GtkComboBox > .button:active:last-child,
.linked > GtkComboBox > .button:focus:active:last-child,
.linked > GtkComboBox > .button:checked:last-child,
.linked > GtkComboBox > .button:focus:checked:last-child,
.linked > GtkComboBox > .button:hover:last-child,
.linked > GtkComboBox > .button:active:hover:last-child,
.linked > GtkComboBox > .button:checked:hover:last-child,
.osd .button,
.linked .button,
.linked .button:hover, /* gtk-widget-factory middle page button */
.linked .button:active,
.linked .button:active:hover,
.linked .button:checked,
.linked .button:checked:checked, /* gtk-widget-factory middle page button */
.linked .button:checked:hover,
.linked .button:insensitive {
	border-right-width: 0;
	border-left-width: 0;
	border-radius: 0;
}

/* Leftmost button */
.linked .entry:first-child,
.linked > GtkComboBox:first-child > .button:last-child,
.linked > GtkComboBox:first-child > .button:focus:last-child,
.linked > GtkComboBox:first-child > .button:insensitive:last-child,
.linked > GtkComboBox:first-child > .button:active:last-child,
.linked > GtkComboBox:first-child > .button:focus:active:last-child,
.linked > GtkComboBox:first-child > .button:checked:first-child:last-child,
.linked > GtkComboBox:first-child > .button:focus:checked:first-child:last-child,
.linked > GtkComboBox:first-child > .button:hover:first-child:last-child,
.linked > GtkComboBox:first-child > .button:active:hover:last-child,
.linked > GtkComboBox:first-child > .button:checked:hover:last-child,
.osd .button:first-child,
.linked .button:first-child,
.linked .button:active:first-child,
.linked .button:active:hover:first-child,
.linked .button:checked:first-child,
.linked .button:checked:hover:first-child,
.linked .button:insensitive:first-child {
    border-radius: 3px;
	border-right-width: 0;
	border-left-width: 2px;
	border-bottom-right-radius: 0;
	border-top-right-radius: 0;
}

/* Rightmost button */
.linked .entry:last-child,
.linked > GtkComboBox:last-child > .button,
.linked > GtkComboBox:last-child > .button:last-child,
.linked > GtkComboBox:last-child > .button:insensitive:last-child,
.linked > GtkComboBox:last-child > .button:active:last-child,
.linked > GtkComboBox:last-child > .button:focus:active:last-child,
.linked > GtkComboBox:last-child > .button:checked:last-child,
.linked > GtkComboBox:last-child > .button:focus:checked:last-child,
.linked > GtkComboBox:last-child > .button:hover:last-child,
.linked > GtkComboBox:last-child > .button:active:hover:last-child,
.linked > GtkComboBox:last-child > .button:checked:hover:last-child,
.osd .button:last-child,
.linked .button:last-child,
.linked .button:active:last-child,
.linked .button:active:hover:last-child,
.linked .button:checked:last-child,
.linked .button:checked:hover:last-child,
.linked .button:insensitive:last-child {
    border-radius: 3px;
	border-right-width: 2px;
	border-left-width: 0;
	border-bottom-left-radius: 0;
	border-top-left-radius: 0;
}

/* Linked single button */
.linked .entry:only-child,
.linked > GtkComboBox:only-child > .button,
.linked > GtkComboBox:only-child > .button:only-child,
.linked > GtkComboBox:only-child > .button:insensitive:only-child,
.linked > GtkComboBox:only-child > .button:hover:only-child,
.linked > GtkComboBox:only-child > .button:active:only-child,
.linked > GtkComboBox:only-child > .button:active:hover:only-child,
.linked > GtkComboBox:only-child > .button:focus:active:only-child,
.linked > GtkComboBox:only-child > .button:checked:only-child,
.linked > GtkComboBox:only-child > .button:checked:hover:only-child,
.linked > GtkComboBox:only-child > .button:focus:checked:only-child,
.osd .button:only-child,
.linked .button:only-child,
.linked .button:active:only-child,
.linked .button:active:hover:only-child,
.linked .button:checked:only-child,
.linked .button:checked:hover:only-child,
.linked .button:insensitive:only-child {
	border-right-width: 1px;
	border-left-width: 1px;
	border-radius: 3px;
}

/* Middle button (vertical) */
.linked.vertical .entry,
.linked.vertical .button,
.linked.vertical .button:active,
.linked.vertical .button:active:hover,
.linked.vertical .button:checked,
.linked.vertical .button:checked:hover,
.linked.vertical .button:insensitive {
	border-top-width: 0;
	border-bottom-width: 0;
	border-radius: 0;
}

/* Top button (vertical) */
.linked.vertical .entry:first-child,
.linked.vertical .button:first-child,
.linked.vertical .button:active:first-child,
.linked.vertical .button:active:hover:first-child,
.linked.vertical .button:checked:first-child,
.linked.vertical .button:checked:hover:first-child,
.linked.vertical .button:insensitive:first-child {
	border-bottom-width: 0;
	border-radius: 3px 3px 0 0;
}

/* Bottom button (vertical) */
.linked.vertical .entry:last-child,
.linked.vertical .button:last-child,
.linked.vertical .button:active:last-child,
.linked.vertical .button:active:hover:last-child,
.linked.vertical .button:checked:last-child,
.linked.vertical .button:checked:hover:last-child,
.linked.vertical .button:insensitive:last-child {
	border-top-width: 0;
	border-radius: 0 0 3px 3px;
}

/* Linked single button (vertical) */
.linked.vertical .entry:only-child,
.linked.vertical .button:only-child,
.linked.vertical .button:active:only-child,
.linked.vertical .button:active:hover:only-child,
.linked.vertical .button:checked:only-child,
.linked.vertical .button:checked:hover:only-child,
.linked.vertical .button:insensitive:only-child {
	border-top-width: 1px;
	border-bottom-width: 1px;
	border-radius: 3px;
}
/* ... */

